--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Cames or Horses</div>
+    <div class='title'>Camels or Horses</div>
     <p>
       Use images of <strong>camels</strong>, or <strong>horses
     </p>
